// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValue has a helptext 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      class="sr-only"
      id="keyValue_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`KeyValue has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <label
      aria-describedby="keyValue_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      label
    </label>
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <span
      class="sr-only"
      id="keyValue_fieldDetails"
    >
      label
      <br />
    </span>
  </div>
</div>
`;

exports[`KeyValue has a predefined Value 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        placeholder="Option 1"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    
  </div>
</div>
`;

exports[`KeyValue has a value 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value="value"
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    
  </div>
</div>
`;

exports[`KeyValue has an id 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    
  </div>
</div>
`;

exports[`KeyValue is not editable 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        disabled=""
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    
  </div>
</div>
`;

exports[`KeyValue is not required 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    
  </div>
</div>
`;

exports[`KeyValue renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <label
      aria-describedby="keyValue_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      text
    </label>
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <span
      class="sr-only"
      id="keyValue_fieldDetails"
    >
      text
      <br />
    </span>
  </div>
</div>
`;

exports[`KeyValue renders component with a key 1`] = `
<div>
  <div
    aria-labelledby="keyValue_fieldDetails"
    class="form-group hide"
    data-field-name="keyValue"
    tabindex="0"
  >
    <div
      aria-labelledby="keyValueLabelkeyValue_fieldDetails"
      class="form-group hide"
      data-field-name="keyValueLabelkeyValue"
      tabindex="0"
    >
      <input
        class="form-control ddm-field-text"
        name="keyValueLabelkeyValue"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="active form-text key-value-editor"
    >
      <label
        class="control-label key-value-label"
      >
        field-reference
        :
      </label>
      <input
        class="key-value-reference-input"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    
  </div>
</div>
`;
